deployment/environments/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-platform-dev
  labels:
    environment: dev
    app.kubernetes.io/part-of: api-platform
